# altstore-repository-server

./: .dockerignore  .env.example  .gitignore  .mcp.json  CLAUDE.md  Cargo.toml  README.md  config.json  devenv.ai.nix  devenv.nix
.claude/: settings.json
.claude/agents/: code-reviewer.md  debugger.md  test-writer.md
.github/workflows/: build.yml  release.yaml  sub_build_binaries.yml  sub_build_docker.yml  tests.yml
docker/: Dockerfile
src/: auth.rs  cache.rs  discovery.rs  generator.rs  ipa_info.rs  main.rs  models.rs  state.rs  token.rs
src/routes/: apps.rs  mod.rs  repository.rs
